# productfound

./: .gitignore  README.md
cli/: README.md  pyproject.toml  setup.py
cli/loot_cli/: __init__.py  __main__.py  analyze.py  analyze_postmortems.py  cli.py  data.py
cli/productfound/: __main__.py  analyze.py  cli.py  data.py  data_b64.py  display.py  postmortems_data.py
docs/: index.html
skill/: SKILL.md
skill/scripts/: analyze-market.sh  competitive-intel.sh  search.sh
