[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "productfound"
version = "1.0.0"
description = "Market research CLI for Productfound — analyze 1,000 startup ideas from failed startups"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0",
]
keywords = ["startup", "market-research", "failure-analysis", "business-ideas"]

[project.scripts]
productfound = "loot_cli.cli:main"

[tool.setuptools.packages.find]
include = ["loot_cli*"]
